# ACMClass-TicketSystem

./: .gitignore  CMakeLists.txt  LICENSE  Notice.md  README.md  bpt.hpp  clean.sh  cmake_install.cmake  disk_manager.h  hash_map.h  localJudgeJusttime.py  utility.h
BackEnd/: CMakeLists.txt  Makefile  cmake_install.cmake  code  localJudge.py  output1.txt  output10.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  run.py
BackEnd/db/: allcachedmanager.hpp  bpt.hpp  hash_map.h
BackEnd/lib/: bst.hpp  hashtable.hpp
BackEnd/src/: cmdprocessor.hpp  main.cpp  systemcore.hpp
Document/: AssignmentRequirement.md
Document/Development/: Notice.md  doc.eddx  开发文档.md
FrontEnd/: app.py  code  core.py  help.docx  requirements.txt
FrontEnd/aplusb/: apb  apb_core.py  apb_front.py  aplusb.cpp
FrontEnd/aplusb/templates/: indexpage.html  inputpage.html  testpage.html
FrontEnd/ref/: source.rar  style1.css
FrontEnd/source/mesjs1/: example.css  example.js  index.html
FrontEnd/source/template1/: about.html  backup.html  contact.html  icons.html  list.html  movies.html  shortcodes.html  sitemap.html  support.html  (+3 more)
FrontEnd/templates/: index.html  result.html
data/basic_1/: my.out
data/basic_2/: my.out  test.in
data/basic_3/: my.out
data/basic_4/: my.out
data/basic_5/: my.out
db/: blocklist.h  filemanager.hpp
doc/: development.md
lib/: fixedstr.hpp  hashtable.hpp  linklist.hpp  mytools.hpp  timetype.hpp  toolfunctions.hpp
src/: cmdprocessor.hpp  main.cpp  systemcore.hpp  systemcore_ret_string.hpp
(+31 files in other folders)
